# rengpu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  imgui.ini  tasks.py
resources/: pyramid.txt  triangles.wgsl
src/: CMakeLists.txt
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  Main.cpp  application.cpp  application.h  main.cpp  webgpu-utils.cpp  webgpu-utils.h
src/glfw-webgpu/: CMakeLists.txt  glfw-webgpu.c  glfw-webgpu.h
src/renderer/: CMakeLists.txt  Context.cpp  Context.hpp  Driver.cpp  Driver.hpp  Public.hpp  RendererContext.cpp  RendererContext.hpp  RendererDriver.cpp  RendererDriver.hpp  Surface.hpp  Vertex.hpp  renderer_context.cpp  renderer_context.h  renderer_driver.cpp  renderer_surface.h
src/utils/: CMakeLists.txt  logging-macros.h  logging_macros.h  webgpu-utils.h
